<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ModeActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_easy"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:fontFamily="@font/dwpica_regular"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/deska"
        android:text="@string/easy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_medium"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_medium"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:fontFamily="@font/dwpica_regular"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/deska"
        android:text="@string/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_hard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_hard"
        app:layout_constraintTop_toBottomOf="@+id/button_easy"
        app:layout_constraintVertical_bias="0.137" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_hard"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:fontFamily="@font/dwpica_regular"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/deska"
        android:text="@string/hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_medium"
        app:layout_constraintVertical_bias="0.183" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_custom"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:background="@drawable/deska"
        android:fontFamily="@font/dwpica_regular"
        android:text="@string/custom"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_hard"
        app:layout_constraintVertical_bias="0.295" />
</androidx.constraintlayout.widget.ConstraintLayout>