<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:fontFamily="@font/dwpica_regular"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/deska"
        android:text="@string/game_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_header"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/main_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_leaderboard"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:fontFamily="@font/dwpica_regular"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/leaderboard"
        android:background="@drawable/deska"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_start"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_start"
        app:layout_constraintTop_toBottomOf="@+id/button_start"
        app:layout_constraintVertical_bias="0.168" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_setting"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:background="@drawable/deska"
        android:fontFamily="@font/dwpica_regular"
        android:text="@string/setting"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_start"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_start"
        app:layout_constraintTop_toBottomOf="@+id/button_leaderboard"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/main_header"
        android:layout_width="273dp"
        android:layout_height="146dp"
        android:layout_marginBottom="56dp"
        android:background="@null"
        android:contentDescription="@string/speakable_text"
        android:fontFamily="sans-serif-condensed-medium"
        android:scaleType="fitCenter"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>