<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resetView"
        android:layout_width="272dp"
        android:layout_height="149dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/deska"
        android:fontFamily="@font/dwpica_regular"
        android:paddingStart="20sp"
        android:paddingTop="15sp"
        android:paddingEnd="25sp"
        android:text="@string/stats_restartQ"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_restart_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_restart_yes"
        android:layout_width="89dp"
        android:layout_height="52dp"
        android:background="@drawable/deska"
        android:fontFamily="@font/dwpica_regular"
        android:text="@string/yes"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_restart_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_restart_no"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_restart_no"
        android:layout_width="91dp"
        android:layout_height="50dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/deska"
        android:fontFamily="@font/dwpica_regular"
        android:text="@string/no"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>